--- a/AspNetMvc4Vs15/AspNetMvc4Vs15/Web.config
+++ b/AspNetMvc4Vs15/AspNetMvc4Vs15/Web.config
@@ -10,6 +10,9 @@
     <add name="DBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Фиалка\Desktop\AspNetMvc4Vs15-master\AspNetMvc4Vs15\App_Data\DocData.mdf;Integrated Security=True" />
   </connectionStrings>
     <system.web>
+      <authentication mode="Forms">
+        <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
+      </authentication>
       <compilation debug="true" targetFramework="4.0" />
     </system.web>
   
