--- a/AspNetMvc4Vs15/AspNetMvc4Vs15/Web.config
+++ b/AspNetMvc4Vs15/AspNetMvc4Vs15/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="DBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Фиалка\Desktop\AspNetMvc4Vs15-master\AspNetMvc4Vs15\App_Data\DocData.mdf;Integrated Security=True" />
+    <add name="DBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Фиалка\Desktop\qfqwfqsfqwfqwfqwfqwf\Application-master\AspNetMvc4Vs15\AspNetMvc4Vs15\App_Data\Database1.mdf;Integrated Security=True" />
   </connectionStrings>
     <system.web>
       <authentication mode="Forms">
