--- a/AspNetMvc4Vs15/AspNetMvc4Vs15/AspNetMvc4Vs15.csproj
+++ b/AspNetMvc4Vs15/AspNetMvc4Vs15/AspNetMvc4Vs15.csproj
@@ -72,9 +72,15 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Helpers.resources">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.pt-br.2.0.30506.0\lib\net40\pt-br\System.Web.Helpers.resources.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.40804.0\lib\net40\System.Web.Mvc.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Mvc.resources">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.pt-br.4.0.40804.0\lib\net40\pt-br\System.Web.Mvc.resources.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
@@ -92,9 +98,18 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.WebPages.Deployment.resources">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.pt-br.2.0.30506.0\lib\net40\pt-br\System.Web.WebPages.Deployment.resources.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor.resources">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.pt-br.2.0.30506.0\lib\net40\pt-br\System.Web.WebPages.Razor.resources.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.resources">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.pt-br.2.0.30506.0\lib\net40\pt-br\System.Web.WebPages.resources.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -109,9 +124,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\DocData.mdf" />
-    <Content Include="App_Data\DocData_log.ldf">
-      <DependentUpon>DocData.mdf</DependentUpon>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="Content\Style.css" />
     <EmbeddedResource Include="Models\Document.hbm.xml">
@@ -173,6 +188,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="documents\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
