--- a/AspNetMvc4Vs15/AspNetMvc4Vs15/AspNetMvc4Vs15.csproj
+++ b/AspNetMvc4Vs15/AspNetMvc4Vs15/AspNetMvc4Vs15.csproj
@@ -127,6 +127,10 @@
     <Content Include="App_Data\Database1_log.ldf">
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\Database2.mdf" />
+    <Content Include="App_Data\Database2_log.ldf">
+      <DependentUpon>Database2.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\Style.css" />
     <EmbeddedResource Include="Models\Document.hbm.xml">
       <SubType>Designer</SubType>
